--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,23 +1,19 @@
-    <div class="side-bar-header">
-      <div class="header-name">
-        <%= link_to edit_user_path(current_user) do %>
-          <%= current_user.name %>
-        <% end %>
-      </div>
-      <div class="create-room">
-        <a href="#">チャットを作成する</a>
-      </div>
+<div class="side-bar-header">
+  <div class="header-name">
+    <%= link_to edit_user_path(current_user) do %>
+      <%= current_user.name %>
+    <% end %>
+  </div>
+  <div class="create-room">
+    <%= link_to "チャットルームを作成", new_room_path %>
+  </div>
+</div>
+<div class="rooms">
+  <% current_user.rooms.each do |room| %>
+    <div class="room">
+      <div class="room-name">
+        <a href="#"><%= room.name %></a>
+      </div>  
     </div>
-    
-    <div class="rooms">
-      <div class="room">
-        <div class="room-name">
-          <a href="#">techroom1</a>
-        </div>
-      </div>
-      <div class="room">
-        <div class="room-name">
-          <a href="#">techroom2</a>
-        </div>
-      </div>
-    </div>
+  <% end %>
+</div>
